--- a/retroload-examples/package.json
+++ b/retroload-examples/package.json
@@ -1,7 +1,7 @@
 {
   "name": "retroload-examples",
   "version": "0.0.1",
-  "description": "Example tape files for testing RetroLoad",
+  "description": "RetroLoad.com example tape files",
   "type": "module",
   "main": "index.js",
   "scripts": {
