Add Atari 800 XL example

--- a/retroload-examples/Dockerfile
+++ b/retroload-examples/Dockerfile
@@ -9,7 +9,9 @@ RUN apt-get update && \
         python3 \
         python-is-python3 \
         git \
-        pip
+        pip \
+        build-essential \
+        libsndfile1-dev
 RUN pip install zxtaputils tzxtools
 WORKDIR /opt
 RUN wget https://www.luigidifraia.com/hosted/software/prg2tap-1.8-linux-x86_64-with-examples.tar.gz && \
@@ -18,6 +20,16 @@ RUN wget https://www.luigidifraia.com/hosted/software/prg2tap-1.8-linux-x86_64-w
 RUN git clone https://github.com/farique1/MSX-Basic-Tokenizer.git && \
         chmod +x /opt/MSX-Basic-Tokenizer/msxbatoken.py && \
         ln -s /opt/MSX-Basic-Tokenizer/msxbatoken.py /usr/local/bin/msxbatoken.py
+RUN wget "https://sourceforge.net/projects/a8cas/files/liba8cas/1.5.0/liba8cas-1.5.0.tar.gz/download" -O liba8cas-1.5.0.tar.gz && \
+        tar -zxvf liba8cas-1.5.0.tar.gz && \
+        cd liba8cas-1.5.0 && \
+        ./configure && \
+        make install && \
+        ldconfig
+RUN wget "https://sourceforge.net/projects/a8cas/files/a8cas-tools/1.3.1/a8cas-tools-1.3.1.tar.gz/download" -O a8cas-tools-1.3.1.tar.gz && \
+        tar -zxvf a8cas-tools-1.3.1.tar.gz && \
+        cd a8cas-tools-1.3.1 && \
+        ./configure && \
+        make install
 COPY /rebuild_all.sh /
 CMD [ "/rebuild_all.sh" ]
-
