--- a/retroload-examples/formats/cpc/Makefile
+++ b/retroload-examples/formats/cpc/Makefile
@@ -1,3 +1,5 @@
+include ../Makefile.inc
+
 all: rl.cdt
 
 # https://www.cpcwiki.eu/forum/applications/2cdt/
@@ -6,7 +8,7 @@ all: rl.cdt
 	2cdt -n -s 0 -t 1 -m 0 -X 2000 -L 2000 -F 2 -r RL $< $@
 
 %.bin: %.asm
-	z80asm $< -o $@
+	$(Z80_ASM) $< -o $@
 
 clean:
 	rm -f *.wav *.bin *.cdt
