--- a/retroload-examples/formats/z1013_z80/Makefile
+++ b/retroload-examples/formats/z1013_z80/Makefile
@@ -1,7 +1,9 @@
+include ../Makefile.inc
+
 all: rl.z80
 
 %.z80: %.asm
-	z80asm "$<" -o "$@"
+	$(Z80_ASM) "$<" -o "$@"
 
 %.wav: %.z80
 	retroload -o $@ $<
