--- a/retroload-examples/formats/lc80_bin/Makefile
+++ b/retroload-examples/formats/lc80_bin/Makefile
@@ -1,10 +1,12 @@
+include ../Makefile.inc
+
 all: rl.bin
 
 %.wav: %.bin
 	retroload --lc80name ffff --lc80start 2000 -o $@ $<
 
 %.bin: %.asm
-	z80asm $< -o $@
+	$(Z80_ASM) $< -o $@
 
 clean:
 	rm -f *.bin *.wav
