--- a/retroload-examples/formats/msx_cas_binary/Makefile
+++ b/retroload-examples/formats/msx_cas_binary/Makefile
@@ -1,3 +1,5 @@
+include ../Makefile.inc
+
 all: rl.cas
 
 # https://openmsx.org/
@@ -5,7 +7,7 @@ run: rl.cas
 	openmsx -machine "Philips_VG_8020-20" rl.cas
 
 %.cas: %.asm
-	z80asm $< -o $@
+	$(Z80_ASM) $< -o $@
 
 %.wav: %.cas
 	retroload --shortpilot --msxfast -o $@ $<
