--- a/retroload-cli/package.json
+++ b/retroload-cli/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint src/"
   },
   "bin": {
-    "retroload": "./src/cli.js"
+    "retroload": "./src/cli.js",
+    "retroload-tokenizer": "./src/tokenizer.js"
   },
   "dependencies": {
     "commander": "^10.0.0",
