--- a/retroload-common/package.json
+++ b/retroload-common/package.json
@@ -18,5 +18,8 @@
     "eslint-config-google": "^0.14.0",
     "jest": "^29.3.1",
     "retroload-examples": "^0.0.1"
+  },
+  "dependencies": {
+    "pako": "^2.1.0"
   }
 }
