--- a/retroload-common/package.json
+++ b/retroload-common/package.json
@@ -7,17 +7,27 @@
   "license": "UNLICENSED",
   "private": true,
   "type": "module",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "lint": "eslint src/",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage"
+    "test": "jest",
+    "test-watch": "jest --watch",
+    "coverage": "jest --coverage",
+    "build": "tsc"
   },
   "devDependencies": {
-    "eslint": "^8.32.0",
-    "eslint-config-google": "^0.14.0",
-    "jest": "^29.3.1",
-    "retroload-examples": "^0.0.1"
+    "@types/jest": "^29.5.0",
+    "@types/pako": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "^8.38.0",
+    "eslint-config-typescript": "^3.0.0",
+    "eslint-config-xo": "^0.43.1",
+    "eslint-config-xo-typescript": "^0.57.0",
+    "jest": "^29.5.0",
+    "retroload-examples": "^0.0.1",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "pako": "^2.1.0"
