--- a/retroload-common/tsconfig.json
+++ b/retroload-common/tsconfig.json
@@ -8,6 +8,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "noImplicitOverride": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
     "declaration": true
