Add vscode auto-import settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": false,
+    "typescript.preferences.importModuleSpecifierEnding": "js",
     "javascript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": false,
+    "javascript.preferences.importModuleSpecifierEnding": "js",
     "editor.tabSize": 2,
     "editor.detectIndentation": false,
     "editor.indentSize": "tabSize",
