--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,4 +18,5 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - run: npm run build --workspaces --if-present
-      - run: npm test --workspaces --if-present
+      - run: npm run test --workspaces --if-present
+      - run: npm run lint --workspaces --if-present
