--- a/retroload-examples/formats/mo5/Makefile
+++ b/retroload-examples/formats/mo5/Makefile
@@ -1,8 +1,11 @@
 include ../Makefile.inc
 
-all: rl.bas
+all: rl.bas rl.k7
 
 %.bas: %.asm
+	$(65XX_ASM) $< -o $@
+
+rl.k7: rl.k7.asm rl.bas
 	$(65XX_ASM) $< -o $@
 
 clean:
