--- a/retroload-examples/formats/mo5_bas/Makefile
+++ b/retroload-examples/formats/mo5_bas/Makefile
@@ -3,10 +3,10 @@ include ../Makefile.inc
 all: rl.bas rl.k7
 
 %.bas: %.asm
-	$(65XX_ASM) $< -o $@
+	$(6809_ASM) $< -o $@
 
 rl.k7: rl.k7.asm rl.bas
-	$(65XX_ASM) $< -o $@
+	$(6809_ASM) $< -o $@
 
 clean:
 	rm -f *.bas *.wav
