Enable noUnusedLocals in .tsconfig

--- a/retroload-common/tsconfig.json
+++ b/retroload-common/tsconfig.json
@@ -12,6 +12,7 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
+    "noUnusedLocals": true,
     "useDefineForClassFields": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
