Enable noUnusedParameters in tsconfig

--- a/retroload-common/tsconfig.json
+++ b/retroload-common/tsconfig.json
@@ -13,6 +13,7 @@
     "noImplicitOverride": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "exactOptionalPropertyTypes": true,
     "useDefineForClassFields": true,
     "skipLibCheck": true,
