Add Electron UEF example

--- a/retroload-examples/formats/electron_generic/Makefile
+++ b/retroload-examples/formats/electron_generic/Makefile
@@ -1,6 +1,9 @@
 include ../Makefile.inc
 
-all: rl.bas
+all: rl.bas rl.uef
+
+%.uef: rl.uef.asm %.bas
+	$(Z80_ASM) $< -o $@
 
 %.bas: %.asm
 	$(Z80_ASM) $< -o $@
