--- a/retroload-cli/package.json
+++ b/retroload-cli/package.json
@@ -4,7 +4,7 @@
   "description": "RetroLoad.com command line interface",
   "author": "Stefan Schramm",
   "email": "mail@stefanschramm.net",
-  "license": "UNLICENSED",
+  "license": "AGPL-3.0-only",
   "private": true,
   "type": "module",
   "main": "src/cli.js",
