Move BASIC tokenizers in own package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "retroload",
   "workspaces": [
+    "retroload-basic",
     "retroload-common",
     "retroload-cli",
     "retroload-encoders",
