--- a/retroload-basic/package.json
+++ b/retroload-basic/package.json
@@ -13,8 +13,7 @@
     "lint": "eslint src/",
     "test": "jest",
     "test-watch": "jest --watch",
-    "coverage": "jest --coverage",
-    "build": "tsc"
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "retroload-common": "^0.0.1"
