--- a/package.json
+++ b/package.json
@@ -11,5 +11,17 @@
     "build": "tsc --build -v",
     "clean": "tsc --build --clean",
     "build-watch": "tsc --build -v --watch"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "^8.40.0",
+    "eslint-config-typescript": "^3.0.0",
+    "eslint-config-xo": "^0.43.1",
+    "eslint-config-xo-typescript": "^0.57.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4"
   }
 }
