--- a/retroload-encoders/package.json
+++ b/retroload-encoders/package.json
@@ -20,17 +20,7 @@
     "retroload-common": "^0.0.1"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.0",
     "@types/pako": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "eslint": "^8.38.0",
-    "eslint-config-typescript": "^3.0.0",
-    "eslint-config-xo": "^0.43.1",
-    "eslint-config-xo-typescript": "^0.57.0",
-    "jest": "^29.5.0",
-    "retroload-examples": "^0.0.1",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4"
+    "retroload-examples": "^0.0.1"
   }
 }
