--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-      - run: npm run build --workspaces --if-present
-      - run: npm run test --workspaces --if-present
-      - run: npm run lint --workspaces --if-present
+      - run: npm run build
+      - run: npm run test --workspaces
+      - run: npm run lint --workspaces
