--- a/retroload-examples/package.json
+++ b/retroload-examples/package.json
@@ -9,6 +9,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint ./index.js"
+    "lint": "eslint ./index.js",
+    "test": "echo 'no tests configured for retroload-examples'"
   }
 }
