Compile to CJS and ESM for compatibility

--- a/retroload-basic/.eslintrc.json
+++ b/retroload-basic/.eslintrc.json
@@ -24,6 +24,9 @@
         "@typescript-eslint/parameter-properties": ["off"],
         "max-params": ["off"],
         "no-warning-comments": ["off"]
+      },
+      "parserOptions": {
+        "project": "tsconfig.esm.json"
       }
     }
   ],
