--- a/retroload-common/jest.config.json
+++ b/retroload-common/jest.config.json
@@ -1,10 +1,11 @@
 {
-  "transform": {"^.+\\.(ts|tsx)$": ["ts-jest"]},
+  "transform": {"^.+\\.(ts|tsx)$": ["ts-jest", {"tsconfig": "tsconfig.cjs.json"}]},
   "moduleNameMapper": {"(.+)\\.js": "$1"},
   "testPathIgnorePatterns": [
     "/node_modules/",
     "/dist/"
   ],
+  "transformIgnorePatterns": [],
   "collectCoverageFrom": [
     "src/**/*.{js,jsx,ts,tsx}",
     "!**/*.d.ts",
