--- a/retroload-common/package.json
+++ b/retroload-common/package.json
@@ -6,9 +6,13 @@
   "email": "mail@stefanschramm.net",
   "license": "AGPL-3.0-only",
   "private": true,
-  "type": "commonjs",
-  "main": "dist/index.js",
-  "types": "dist/index.d.js",
+  "type": "module",
+  "exports": {
+    "require": "./dist/cjs/index.js",
+    "import": "./dist/esm/index.js"
+  },
+  "main": "dist/cjs/index.js",
+  "types": "dist/cjs/index.d.js",
   "scripts": {
     "lint": "eslint src/",
     "test": "jest",
