--- a/retroload-common/tsconfig.esm.json
+++ b/retroload-common/tsconfig.esm.json
@@ -2,6 +2,7 @@
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "dist"
+    "outDir": "dist/esm",
+    "module": "es6"
   }
 }
