--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+      - run: sudo apt-get install libasound2-dev
       - run: npm ci
       - run: npm run build
       - run: npm run test --workspaces
