Migrate examples to TS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     {"path": "retroload-common/tsconfig.esm.json"},
     {"path": "retroload-encoders/tsconfig.cjs.json"},
     {"path": "retroload-encoders/tsconfig.esm.json"},
+    {"path": "retroload-examples/tsconfig.cjs.json"},
+    {"path": "retroload-examples/tsconfig.esm.json"},
     {"path": "retroload-cli/tsconfig.cjs.json"},
     {"path": "retroload-cli/tsconfig.esm.json"}
   ]
