Ignore index.ts in coverage reports

--- a/retroload-basic/jest.config.json
+++ b/retroload-basic/jest.config.json
@@ -9,6 +9,7 @@
   "collectCoverageFrom": [
     "src/**/*.{js,jsx,ts,tsx}",
     "!**/*.d.ts",
-    "!**/node_modules/**"
+    "!**/node_modules/**",
+    "!src/index.ts"
   ]
 }
