--- a/retroload-cli/package.json
+++ b/retroload-cli/package.json
@@ -7,7 +7,7 @@
   "license": "AGPL-3.0-only",
   "private": true,
   "type": "module",
-  "main": "src/cli.js",
+  "main": "src/esm/retroload.js",
   "files": ["dist/"],
   "scripts": {
     "lint": "eslint src/",
