Add TI-99/4A TIFILE adapter and example

--- a/retroload-examples/formats/ti_basic/Makefile
+++ b/retroload-examples/formats/ti_basic/Makefile
@@ -1,5 +1,8 @@
 all: rl.fiad
 
+# rl.tifile has been generated using https://github.com/weetmuts/ti994a_basic
+# and truncated manually to obtain rl.bin
+
 rl.fiad: fiad_header.bin rl.bin
 	dd if=fiad_header.bin of=$@ # 128 bytes header header
 	dd if=/dev/zero of=$@ conv=notrunc bs=1 count=256 seek=128 # pad to full 256 byte blocks
