Preparations for retroload-save

--- a/retroload-cli/package.json
+++ b/retroload-cli/package.json
@@ -15,7 +15,8 @@
   },
   "bin": {
     "retroload": "./bin/retroload.js",
-    "retroload-tokenizer": "./bin/retroload-tokenizer.js"
+    "retroload-tokenizer": "./bin/retroload-tokenizer.js",
+    "retroload-save": "./bin/retroload-save.js"
   },
   "dependencies": {
     "commander": "^10.0.0",
