Fix vscode config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,6 @@
   "editor.indentSize": "tabSize",
   "eslint.workingDirectories": [
     "retroload-lib",
-    "retroload-cli"
+    "retroload"
   ]
 }
