--- a/retroload-lib/package.json
+++ b/retroload-lib/package.json
@@ -1,9 +1,11 @@
 {
   "name": "retroload-lib",
-  "version": "0.0.4",
-  "description": "RetroLoad.com library",
+  "version": "0.0.5",
+  "description": "Library for converting tape archive files of historical computers into sound",
   "author": "Stefan Schramm",
   "email": "mail@stefanschramm.net",
+  "homepage": "https://retroload.com/",
+  "repository": "github:stefanschramm/retroload",
   "license": "AGPL-3.0-only",
   "type": "module",
   "exports": {
