--- a/retroload-lib/package.json
+++ b/retroload-lib/package.json
@@ -21,12 +21,14 @@
     "lint": "eslint src/",
     "test": "jest",
     "test-watch": "jest --watch",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "updateVersion": "genversion --es6 -s src/version.ts"
   },
   "dependencies": {
     "pako": "^2.1.0"
   },
   "devDependencies": {
-    "@types/pako": "^2.0.2"
+    "@types/pako": "^2.0.2",
+    "genversion": "^3.1.1"
   }
 }
