Add Acorn Electron assembler example

--- a/retroload-lib/examples/formats/electron_generic/Makefile
+++ b/retroload-lib/examples/formats/electron_generic/Makefile
@@ -1,12 +1,15 @@
 include ../Makefile.inc
 
-all: rl.bas rl.uef
+all: rl.bas rl.bin rl.uef
 
 %.uef: rl.uef.asm %.bas
 	$(Z80_ASM) $< -o $@
 
-%.bas: %.asm
+%.bas: %.bas.asm
 	$(Z80_ASM) $< -o $@
 
+%.bin: %.bin.asm
+	$(65XX_ASM) $< -o $@
+
 clean:
-	rm -f *.bas
+	rm -f *.bas *.uef *. bas *.bin *.wav
