--- a/retroload-lib/package.json
+++ b/retroload-lib/package.json
@@ -1,7 +1,7 @@
 {
   "name": "retroload-lib",
-  "version": "0.0.9",
-  "description": "Library for converting tape archive files of historical computers into sound",
+  "version": "0.0.10",
+  "description": "Library for converting tape archive files of historical computers into sound for loading them on real devices",
   "author": "Stefan Schramm",
   "email": "mail@stefanschramm.net",
   "homepage": "https://retroload.com/",
