Add MSX Generic Binary example

--- a/retroload-lib/examples/formats/msx_cas_binary/Makefile
+++ b/retroload-lib/examples/formats/msx_cas_binary/Makefile
@@ -1,12 +1,15 @@
 include ../Makefile.inc
 
-all: rl.cas
+all: rl.cas rl.bin
 
 # https://openmsx.org/
 run: rl.cas
 	openmsx -machine "Philips_VG_8020-20" rl.cas
 
-%.cas: %.asm
+%.cas: %.cas.asm %.bin
+	$(Z80_ASM) $< -o $@
+
+%.bin: %.bin.asm
 	$(Z80_ASM) $< -o $@
 
 %.wav: %.cas
