--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "retroload"
   ],
   "scripts": {
-    "build": "npm run updateVersion && tsc --build -v",
+    "build": "npm run updateVersion && tsc --build -v && chmod +x retroload/dist/esm/retroload*.js",
     "clean": "rm -rf retroload/dist && rm -rf retroload-lib/dist && tsc --build --clean",
     "build-watch": "tsc --build -v --watch",
     "prepublishOnly": "npm run build",
