--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
     "@eslint/js": "^9.13.0",
     "@stylistic/eslint-plugin-ts": "^2.9.0",
     "@types/eslint__js": "^8.42.3",
-    "@types/jest": "^29.5.11",
     "eslint": "^9.13.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.10.0"
+    "typescript-eslint": "^8.10.0",
+    "vitest": "^2.1.8"
   }
 }
