--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@stylistic/eslint-plugin-ts": "^3.1.0",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.13.1",
+    "@vitest/coverage-v8": "^3.0.8",
     "eslint": "^9.20.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.23.0",
-    "vitest": "^3.0.7"
+    "vitest": "^3.0.8"
   }
 }
