--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
-    "@stylistic/eslint-plugin-ts": "^4.4.1",
+    "@stylistic/eslint-plugin": "^5.4.0",
     "@types/node": "^24.7.2",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.37.0",
