Move KC .sss example

--- a/retroload-lib/examples/formats/kc854/Makefile
+++ b/retroload-lib/examples/formats/kc854/Makefile
@@ -1,10 +1,13 @@
 include ../Makefile.inc
 
-all: rl.kcc
+all: rl.kcc rl.sss
 
-%.kcc: %.asm
+%.kcc: %.kcc.asm
+	$(Z80_ASM) $< -o $@
+
+%.sss: %.sss.asm
 	$(Z80_ASM) $< -o $@
 
 clean:
-	rm -f *.kcc *.wav
+	rm -f *.kcc *.sss *.wav
 
